WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208389
Clear FontDatabase when low-memory-warning happens
https://bugs.webkit.org/show_bug.cgi?id=208389
Summary
Clear FontDatabase when low-memory-warning happens
Yusuke Suzuki
Reported
2020-02-28 13:16:06 PST
Clear FontDatabase when low-memory-warning happens
Attachments
Patch
(1.57 KB, patch)
2020-02-28 13:16 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(1.61 KB, patch)
2020-02-28 13:17 PST
,
Yusuke Suzuki
cdumez
: review+
cdumez
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-02-28 13:16:55 PST
Created
attachment 392011
[details]
Patch
Yusuke Suzuki
Comment 2
2020-02-28 13:17:40 PST
Created
attachment 392012
[details]
Patch
Chris Dumez
Comment 3
2020-02-28 13:34:22 PST
Comment on
attachment 392012
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=392012&action=review
r=me with change.
> Source/WebCore/platform/graphics/cocoa/FontCacheCoreText.cpp:1385 > +#if HAVE(DISALLOWABLE_USER_INSTALLED_FONTS)
You can replace all this with simply: FontDatabase::singletonAllowingUserInstalledFonts().clear(); FontDatabase::singletonDisallowingUserInstalledFonts().clear(); without ifdefs. FontDatabase::singletonAllowingUserInstalledFonts() & FontDatabase::singletonDisallowingUserInstalledFonts() resolve to FontDatabase::singleton() when !HAVE(DISALLOWABLE_USER_INSTALLED_FONTS)
Yusuke Suzuki
Comment 4
2020-02-28 13:36:51 PST
Comment on
attachment 392012
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=392012&action=review
>> Source/WebCore/platform/graphics/cocoa/FontCacheCoreText.cpp:1385 >> +#if HAVE(DISALLOWABLE_USER_INSTALLED_FONTS) > > You can replace all this with simply: > FontDatabase::singletonAllowingUserInstalledFonts().clear(); > FontDatabase::singletonDisallowingUserInstalledFonts().clear(); > > without ifdefs. FontDatabase::singletonAllowingUserInstalledFonts() & FontDatabase::singletonDisallowingUserInstalledFonts() resolve to FontDatabase::singleton() when !HAVE(DISALLOWABLE_USER_INSTALLED_FONTS)
Changed.
Yusuke Suzuki
Comment 5
2020-02-28 13:39:11 PST
Committed
r257657
: <
https://trac.webkit.org/changeset/257657
>
Radar WebKit Bug Importer
Comment 6
2020-02-28 13:40:15 PST
<
rdar://problem/59900871
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug