Clear FontDatabase when low-memory-warning happens https://bugs.webkit.org/show_bug.cgi?id=208389

Reviewed by Chris Dumez.

FontDatabase can monotonically increase. We should clear it when low-memory-warning happens.

* platform/graphics/cocoa/FontCacheCoreText.cpp:
(WebCore::FontCache::platformPurgeInactiveFontData):

Canonical link: https://commits.webkit.org/221326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257657 268f45cc-cd09-0410-ab3c-d52691b4dbfc